crates/ars-collections/tests/ui/tab_key_payload_variant.rs
use ars_collections::TabKey;

#[derive(TabKey)]
#[tab_key(ordinal)]
enum SettingsTab {
    Profile,
    Billing(u8),
}

fn main() {}
